# octetos-schedule

./: .gitignore  Makefile.am  configure.ac  ec-schedule.bat  octetos-schedule.cbp  schedule-dbg.nsi  schedule-r.nsi  schedule.cbp  schedule.depend  schedule.iss  schedule.layout  schedule.nsi  schedule.sln  schedule.vcxproj  schedule.vcxproj.filters
logs/schedule/20220128-162307/: historial.csv
logs/schedule/20220128-162420/: historial.csv
logs/schedule/20220128-162712/: historial.csv
logs/schedule/20220128-163146/: historial.csv
schedule/: schedule.sln
src/: Analyzar.cc  Analyzer.cc  Configuration.cc  Main.cc  Main.hh  Makefile.am  Packing.cc  Packing.hh  Project.cc  Project.hh  Proyect.cc  Proyect.hh  WndMain.cc  config-win.h  ec-schedule-win.cc  ec-schedule.bat  ec-schedule.cc  main.cc  resources.xml  sche.desktop.in  schedule-data.cc  schedule-data.hh  schedule-eval.cc  schedule-output.cc  schedule.cc  schedule.hh  schedule.ui
tests/: Makefile.am  rooms.csv  subjects.csv  teachers.csv  v0-schedule.cc  v0.cc
tests/project/: groups.csv  schedule.cfg  teachers-subjects.csv
tests/schedule/project/: config  rooms.csv  schedule.cfg  subjects.csv  teachers.csv
vs/octetos-schedule.dll/: octetos-schedule.dll.sln  octetos-schedule.dll.vcxproj  octetos-schedule.dll.vcxproj.filters
vs/schedule.exe/: schedule.exe.sln  schedule.exe.vcxproj  schedule.exe.vcxproj.filters
