

AC_INIT(octetos_schedule, 0.2.0-alpha)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CXX








LT_INIT

dnl TODO: mover zip a su propio projecto
PKG_CHECK_MODULES(OCTETOS_SCHEDULE, [octetos-core gtkmm-3.0 libzip])




AC_OUTPUT([
Makefile
src/Makefile

])
